--- a/sass/jsonpanel.scss
+++ b/sass/jsonpanel.scss
@@ -60,6 +60,13 @@
       display: none;
     }
   }
+  .pair {
+    $hangingIndent: 30px;
+    max-width: 600px;
+    padding-left: $hangingIndent;
+    text-indent: -1 * $hangingIndent;
+    white-space: normal;
+  }
 
   // only applies in collapsed state
   .val-inner {
