--- a/sass/jsonpanel.scss
+++ b/sass/jsonpanel.scss
@@ -77,7 +77,7 @@
     vertical-align: top;
   }
 
-  .expandable {
+  .expander {
     display: block;
     text-decoration: none;
     color: black;
@@ -102,7 +102,7 @@
   .expanded {
     position: relative;
 
-    & > .expandable {
+    & > .expander {
       // collapser
       .key:before {
         content: "-";
