--- a/stylesheets/demo.css
+++ b/stylesheets/demo.css
@@ -83,7 +83,7 @@ body {
   vertical-align: top;
 }
 /* line 80, ../sass/jsonpanel.scss */
-.jsonpanel .expandable {
+.jsonpanel .expander {
   display: block;
   text-decoration: none;
   color: black;
@@ -95,12 +95,12 @@ body {
   transition: background-color 0.3s ease 0.5;
 }
 /* line 89, ../sass/jsonpanel.scss */
-.jsonpanel .expandable:hover {
+.jsonpanel .expander:hover {
   background-color: #d3dff0;
   background-color: #d3dff0;
 }
 /* line 96, ../sass/jsonpanel.scss */
-.jsonpanel .expandable .key:before {
+.jsonpanel .expander .key:before {
   content: "+";
   margin-right: 0.5em;
 }
@@ -109,11 +109,11 @@ body {
   position: relative;
 }
 /* line 107, ../sass/jsonpanel.scss */
-.jsonpanel .expanded > .expandable .key:before {
+.jsonpanel .expanded > .expander .key:before {
   content: "-";
 }
 /* line 111, ../sass/jsonpanel.scss */
-.jsonpanel .expanded > .expandable .val {
+.jsonpanel .expanded > .expander .val {
   opacity: 0;
 }
 /* line 117, ../sass/jsonpanel.scss */
