refactor Pair tag creation

--- a/sass/jsonpanel.scss
+++ b/sass/jsonpanel.scss
@@ -60,7 +60,7 @@
       display: none;
     }
   }
-  .pair {
+  .expandable {
     $hangingIndent: 30px;
     max-width: 600px;
     padding-left: $hangingIndent;
