--- a/stylesheets/jsonpanel.css
+++ b/stylesheets/jsonpanel.css
@@ -54,7 +54,7 @@
   display: none;
 }
 /* line 63, ../sass/jsonpanel.scss */
-.jsonpanel .pair {
+.jsonpanel .expandable {
   max-width: 600px;
   padding-left: 30px;
   text-indent: -30px;
