--- a/sass/jsonpanel.scss
+++ b/sass/jsonpanel.scss
@@ -60,7 +60,7 @@
       display: none;
     }
   }
-  .expandable {
+  .pair.simple {
     $hangingIndent: 30px;
     max-width: 600px;
     padding-left: $hangingIndent;
